--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,3 +180,71 @@ footer {
     width: 50%;
     font-size: 15px;
 }
+
+.main-sign-up{
+    padding: 20px;
+}
+
+
+.background-signup {
+    padding: 25px;
+    background-image: url(/assets/images/chef.jpg);
+    height: 1000px;
+    width: 1810px;
+    background-size: cover;
+}
+
+.sign-up-box {
+    padding: 20px;
+    height: 600px;
+    width: 40%;
+    border: 1px solid #312a29;
+    display: flex;
+    flex-direction: column;
+    background-color: #1a14149d;
+    color: #e3e2de;
+    border-radius: 15px;
+}
+
+.sign-up-box h2{
+    color: #e3e2de;
+    text-shadow: 1px 1px 2px #201a1a;
+    text-align: center;
+    text-decoration: none;
+}
+
+.sign-up-box label {
+    padding: 10px;
+}
+
+.input{
+    padding: 5px;
+    background-color: transparent;
+    border:1px solid #e3e2de;
+    border-radius: 5px;
+}
+
+.submit {
+    padding: 10px;
+    margin-top: 20px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    width: 120px;
+    font-weight: bold;
+    font-family: Varela Round, sans-serif;
+    text-transform: uppercase;
+}
+
+.submit:hover {
+    background-color: #D1B8A4;
+    transition-duration: 1s;
+}
+
+.radio {
+    border-radius: 5px;
+    background-color: #d1b8a4a6;
+    color: #312a29;
+    font-weight: bold;
+    border: 1px solid #312a29;
+}
+
