--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&family=Work+Sans:wght@300&display=swap');
 
-
-/* CSS colors
-
-lighter blue - #80AFBF
-blue - #5991A6
-brown - #3C3332
-lighter brown - #926F5B
-nude - #D1B8A4
-#04385Dff
-
-*/
-
 * {
     margin: 0;
     padding: 0;
@@ -53,7 +41,7 @@ main{
 
 .map {
     margin-top: 30px;
-    margin-left: 185px;
+    margin-left: 145px;
 }
 
 .menu {
@@ -89,8 +77,8 @@ main{
 
 .about {
     padding: 10px;
-    background-color: #74412065;
-    width: 60%;
+    background-color: #8d6f5b65;
+    width: 50%;
     text-align: center;
     border-radius: 15px;
     border: 2px solid #9d9699;
@@ -100,7 +88,7 @@ main{
 
 .opening-time {
     padding: 10px;
-    background-color: #74412065;
+    background-color: #8d6f5b65;
     width: 40%;
     border-radius: 15px;
     border: 2px solid #9d9699;
@@ -111,7 +99,7 @@ main{
 
 .phone {
     padding: 10px;
-    background-color: #74412065;
+    background-color: #8d6f5b65;
     width: 40%;
     border-radius: 15px;
     border: 2px solid #9d9699;
@@ -122,8 +110,8 @@ main{
 
 .address {
     padding: 10px;
-    background-color: #74412065;
-    width: 40%;
+    background-color: #8d6f5b65;
+    width: 30%;
     border-radius: 15px;
     border: 2px solid #9d9699;
     border-style: ridge;
@@ -132,20 +120,20 @@ main{
     margin-left: 180px;
 }
 
-h2, h3 {
+h2 {
     padding: 10px;
-    color: #3C3332;
+    color: #f5f2f2;
     font-weight: bold;
     font-family: Varela Round, sans-serif;
     text-decoration: 2px underline;
-    text-shadow: 2px 2px 3px #fff;
+    text-shadow: 2px 2px 3px rgba(39, 34, 34, 0.664);
 }
 
 p {
     padding: 10px;
-    color: #1a1414;
+    color: #f5f2f2;
     font-weight: bold;
-    text-shadow: 2px 2px 3px #fff;
+    text-shadow: 2px 2px 3px rgba(39, 34, 34, 0.664);;
     font-size: 20px;
 }
 
@@ -197,6 +185,8 @@ footer {
 }
 
 .sign-up-box {
+    margin-top: 50px;
+    margin-left: 30px;
     padding: 20px;
     height: 600px;
     width: 40%;
@@ -216,11 +206,15 @@ footer {
 }
 
 .sign-up-box label {
-    padding: 10px;
+    padding: 10px 10px 10px 0;
+    color: #e3e2de;
+    font-size: 20px;
+    
 }
 
 .input{
-    padding: 5px;
+    padding: 10px;
+    color: #fff;
     background-color: transparent;
     border:1px solid #e3e2de;
     border-radius: 5px;
@@ -243,9 +237,10 @@ footer {
 }
 
 .radio {
+    padding: 10px;
     border-radius: 5px;
     background-color: #d1b8a4a6;
-    color: #312a29;
+    color: #252020;
     font-weight: bold;
     border: 1px solid #312a29;
 }
