--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,9 +39,9 @@ main{
     font-size: 35px;
 }
 
-.map {
-    margin-top: 30px;
-    margin-left: 145px;
+.map iframe{
+    width: 100%;
+    height: 400px;
 }
 
 .menu {
@@ -73,12 +73,13 @@ main{
 .wrap {
     display: flex;
     justify-content: space-evenly;
+    gap: 20px;
 }
 
 .about {
     padding: 10px;
-    background-color: #8d6f5b65;
-    width: 50%;
+    background-color: #61544be3;
+    width: 40%;
     text-align: center;
     border-radius: 15px;
     border: 2px solid #9d9699;
@@ -88,7 +89,7 @@ main{
 
 .opening-time {
     padding: 10px;
-    background-color: #8d6f5b65;
+    background-color: #61544be3;
     width: 40%;
     border-radius: 15px;
     border: 2px solid #9d9699;
@@ -99,7 +100,7 @@ main{
 
 .phone {
     padding: 10px;
-    background-color: #8d6f5b65;
+    background-color: #61544be3;
     width: 40%;
     border-radius: 15px;
     border: 2px solid #9d9699;
@@ -110,14 +111,13 @@ main{
 
 .address {
     padding: 10px;
-    background-color: #8d6f5b65;
-    width: 30%;
+    background-color: #61544be3;
+    width: 40%;
     border-radius: 15px;
     border: 2px solid #9d9699;
     border-style: ridge;
     box-shadow: 10px 10px #9d969983;
     text-align: center;
-    margin-left: 180px;
 }
 
 h2 {
@@ -185,11 +185,11 @@ footer {
 }
 
 .sign-up-box {
-    margin-top: 50px;
-    margin-left: 30px;
+    margin-top: 2.5%;
+    margin-left: 2.5%;
     padding: 20px;
     height: 600px;
-    width: 40%;
+    width: 30%;
     border: 1px solid #312a29;
     display: flex;
     flex-direction: column;
