--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ p {
     gap: 20px;
 }
 
-.about {
+.about, .opening-time, .phone, .address {
     padding: 10px;
     background-color: #61544be3;
     width: 40%;
@@ -99,36 +99,6 @@ p {
     border-radius: 15px;
     border: 2px ridge #9d9699;
     box-shadow: 10px 10px #9d969983;
-}
-
-.opening-time {
-    padding: 10px;
-    background-color: #61544be3;
-    width: 40%;
-    border-radius: 15px;
-    border: 2px ridge #9d9699;
-    box-shadow: 10px 10px #9d969983;
-    text-align: center;
-}
-
-.phone {
-    padding: 10px;
-    background-color: #61544be3;
-    width: 40%;
-    border-radius: 15px;
-    border: 2px ridge #9d9699;
-    box-shadow: 10px 10px #9d969983;
-    text-align: center;
-}
-
-.address {
-    padding: 10px;
-    background-color: #61544be3;
-    width: 40%;
-    border-radius: 15px;
-    border: 2px ridge #9d9699;
-    box-shadow: 10px 10px #9d969983;
-    text-align: center;
 }
 
 .main-courses {
@@ -153,7 +123,7 @@ p {
     font-size: 20px;
 }
 
-.bread {
+.bread, .pasta, .seafood, .dessert {
     padding: 10px;
     width: 45%;
     text-align: left;
@@ -173,16 +143,6 @@ p {
     background-size: cover;
 }
 
-.pasta {
-    padding: 10px;
-    width: 45%;
-    text-align: left;
-    border: 2px ridge #9d9699;
-    border-radius: 15px;
-    box-shadow: 10px 10px #9d969983;
-    background-color: #3C3332;
-}
-
 .pasta-photo {
     background-image: url(/assets/images/Pasta.jpeg);
     width: 45%;
@@ -193,16 +153,6 @@ p {
     background-size: cover;
 }
 
-.seafood {
-    padding: 10px;
-    width: 45%;
-    text-align: left;
-    border: 2px ridge #9d9699;
-    border-radius: 15px;
-    box-shadow: 10px 10px #9d969983;
-    background-color: #3C3332;
-}
-
 .seafood-photo {
     background-image: url(/assets/images/seafood.jpeg);
     width: 45%;
@@ -211,16 +161,6 @@ p {
     border-radius: 15px;
     box-shadow: 10px 10px #9d969983;
     background-size: cover;
-}
-
-.dessert {
-    padding: 10px;
-    width: 45%;
-    text-align: left;
-    border: 2px ridge #9d9699;
-    border-radius: 15px;
-    box-shadow: 10px 10px #9d969983;
-    background-color: #3C3332;
 }
 
 .dessert-photo {
@@ -328,4 +268,85 @@ footer {
 .social-media a{
     text-decoration: none;
     color: #312a29;
+}
+
+@media screen and (max-width: 1500px) {
+    .about, .opening-time, .phone, .address {
+        width: 90%;
+        margin-right: 5%; 
+    }
+
+    .bread, .pasta, .seafood, .dessert {
+        height: 700px;
+    }
+
+    .bread-photo, .pasta-photo, .seafood-photo, .dessert-photo {
+        height: 725px;
+        background-position: center;
+    }
+
+    .sign-up-box {
+        width: 300px;
+        height: 700px;
+        margin: 20px;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    
+    .about, .opening-time, .phone, .address {
+        width: 90%;
+    }
+
+    .bread, .pasta, .seafood, .dessert {
+        height: 700px;
+    }
+
+    .bread-photo, .pasta-photo, .seafood-photo, .dessert-photo {
+        height: 725px;
+        background-position: center;
+    }
+
+    .sign-up-box {
+        width: 300px;
+        height: 700px;
+        margin: 20px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .menu {
+        display: flex;
+        flex-direction: row;    
+    }
+
+    header {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .sign-up-box {
+        width: 300px;
+        height: 700px;
+        margin: 20px;
+    }
+
+    .bread, .pasta, .seafood, .dessert {
+        width: 90%;
+    }
+
+    .bread-photo, .pasta-photo, .seafood-photo, .dessert-photo {
+        width: 95%;
+        background-position: center;
+    }
+    .about, .opening-time, .phone, .address {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .wrap {
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+    }
 }
