--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,7 @@ p {
 
 
 .background-signup {
-    background-image: url(../assets/images/chef.jpg);
+    background-image: url(../images/chef.jpg);
     background-size: cover;
     height: 1200PX;
 }
